# Agent_Assemble

./: .gitignore  DEMO_SCRIPT.md  README.md  render.yaml
care_gap_agent/: .env.example  Dockerfile  Procfile  README.md  docker-compose.yml  requirements.txt
care_gap_agent/care_gap_agent/: __init__.py  agent.py  app.py  resources.py
care_gap_agent/prompts/: agent_description.md  agent_instruction.md  skills.yaml
care_gap_agent/routing/: rules.yaml
care_gap_agent/scripts/: test_care_gap_agent.sh
care_gap_agent/shared/tools/: __init__.py  care_gap.py
care_gap_mcp/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
care_gap_mcp/knowledge_base/: care_gap_rules.yaml  terminology.yaml
care_gap_mcp/po_fastmcp/: __init__.py  fhir_client.py  kb_loader.py
care_gap_mcp/prompts/: outreach_portal.md  outreach_sms.md  rationale_system.md  tone_guide.md
care_gap_mcp/tools/: __init__.py  care_gaps.py  conditions.py  observations.py  outreach.py  patient_summary.py
